# advent-of-code

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst
2015/: README.md  README.rst
2015/01/: Cargo.toml
2015/02/: Cargo.toml
2015/03/: Cargo.toml
2015/04/: Cargo.toml
2015/05/: Cargo.toml
2015/06/: Cargo.toml
2015/07/: Cargo.toml
2015/09/: Cargo.toml
2015/10/: Cargo.toml
2015/11/: Cargo.toml
2015/12/: Cargo.toml
2015/13/: Cargo.toml
2015/14/: Cargo.toml
2015/15/: Cargo.toml
2015/16/: Cargo.toml
2015/17/: Cargo.toml
2015/18/: Cargo.toml
2015/19/: Cargo.toml
2015/20/: Cargo.toml
2015/21/: Cargo.toml
2015/22/: Cargo.toml
2015/23/: Cargo.toml
2015/24/: Cargo.toml
2015/go-01/: go.mod  main.go  main_test.go
2015/go-02/: go.mod  main.go  main_test.go
2015/go-03/: go.mod  main.go  main_test.go
2015/go-04/: go.mod  main.go  main_test.go
2015/go-05/: go.mod  main.go  main_test.go
2016/: README.md  README.rst
2016/02/: Cargo.toml
2016/03/: Cargo.toml
2016/04/: Cargo.toml
2016/05/: Cargo.toml
2016/07/: Cargo.toml
2016/08/: Cargo.toml
2016/10/: Cargo.toml
2016/11/: Cargo.toml
2016/12/: Cargo.toml
2016/14/: Cargo.toml
2016/17/: Cargo.toml
2016/18/: Cargo.toml
2016/19/: Cargo.toml
2016/22/: Cargo.toml
2016/23/: Cargo.toml
2016/24/: Cargo.toml
2016/25/: Cargo.toml
2017/01/: Cargo.toml
2017/02/: Cargo.toml
2017/03/: Cargo.toml
2017/04/: Cargo.toml
2017/05/: Cargo.toml
2017/06/: Cargo.toml
2017/09/: Cargo.toml
2017/10/: Cargo.toml
2017/11/: Cargo.toml
2017/12/: Cargo.toml
2017/17/: Cargo.toml
2017/18/: Cargo.toml
2017/19/: Cargo.toml
2017/22/: Cargo.toml
2017/24/: Cargo.toml
2017/25/: Cargo.toml
2018/: README.md  README.rst
2018/01/: 01-2.sml  01.sml
2018/02/: 01.c  02.c  CMakeLists.txt
2018/04/: 01.cpp  02.cpp
2018/05/: 01.js  02.js  05.js
2018/06/: One.cs  Two.cs
2018/07/: 01.py  02.py
2018/08/: 01.pl  02.pl
2018/09/: 01.ts  02.ts
2018/10/: 01.rb  02.rb
2018/11/: 01.py  02.py
2018/12/: 01.sh  02.sh
2018/13/: 01.lua  02.lua
2018/14/: 01.tcl  02.tcl
2018/15/: Cargo.toml
2018/16/: Cargo.toml
2018/17/: Cargo.toml
2018/18/: Cargo.toml
2018/19/: Cargo.toml
2018/20/: Cargo.toml
2018/21/: Cargo.toml
2018/23/: Cargo.toml
2018/24/: Cargo.toml
2018/rs-01/: Cargo.toml
2018/rs-02/: Cargo.toml
2018/rs-03/: Cargo.toml
2018/rs-04/: Cargo.toml
2018/rs-05/: Cargo.toml
2018/rs-06/: Cargo.toml
2018/rs-08/: Cargo.toml
2018/rs-10/: Cargo.toml
2019/: README.md  README.rst
2019/01/: Cargo.toml  input.txt
2020/: README.md  README.rst
2020/15/: Cargo.toml
2020/15/benches/: day15.rs
2020/15/src/: lib.rs  main.rs
2022/06/: Cargo.toml
2022/06/benches/: day06.rs
2022/06/src/: lib.rs  main.rs
2022/23/: Cargo.toml
2022/23/benches/: day23.rs
2022/23/src/: lib.rs  main.rs
2023/12/: Cargo.toml
2023/12/benches/: day12.rs
2023/12/src/: lib.rs  main.rs
2023/15/: Cargo.toml
2023/15/benches/: day15.rs
2023/15/src/: lib.rs  main.rs
2023/24/: Cargo.toml
2023/24/benches/: day24.rs
2023/24/src/: lib.rs  main.rs
2025/02/: Cargo.toml
2025/02/src/: lib.rs  main.rs
2025/07/: Cargo.toml
2025/07/src/: lib.rs  main.rs
2025/10/: Cargo.toml
2025/10/src/: lib.rs  main.rs
(+608 files in other folders)
