[package]
name = "day15"
version = "0.1.0"
authors = ["Roger G. Coram <psypherpunk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "day15"
harness = false

[dependencies]

[dev-dependencies]
criterion = "^0.3"