[package]
name = "day23"
version = "0.1.0"
authors = ["PsypherPunk <psypherpunk@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "day23"
harness = false
