[package]
name = "day12"
version = "0.1.0"
authors = ["PsypherPunk <psypherpunk@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "^1.8"

[dev-dependencies]
criterion = "^0.5"

[[bench]]
name = "day12"
harness = false
