[package]
name = "day24"
version = "0.1.0"
authors = ["PsypherPunk <psypherpunk@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "^0.15"
ndarray-linalg = { version = "0.16", features = ["netlib-static"] }
peg = "^0.8"

[dev-dependencies]
criterion = "^0.5"

[[bench]]
name = "day24"
harness = false
