[package]
name = "day02"
version = "0.1.0"
authors = ["PsypherPunk <psypherpunk@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "^1.0.15"
rayon = "^1.11.0"

[dev-dependencies]
criterion = "^0.5"

[[bench]]
name = "day02"
harness = false
