[package]
name = "day10"
version = "0.1.0"
authors = ["PsypherPunk <psypherpunk@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.5"
z3 = "0.19.5"

[dev-dependencies]
criterion = "^0.5"

[[bench]]
name = "day10"
harness = false
